Interfaced Models to Routes
